FIxed some tests and added more